Fixed horizontal scroll issue with header and updated readme

--- a/style.css
+++ b/style.css
@@ -18,13 +18,20 @@
 	box-sizing: border-box;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	background: var(--bg-page);
 	color: var(--text-body);
-	font-family: 'Hack', monospace;
-	font-size: 14px;
-	margin: 0 auto;
-	max-width: 2000px;
+	font-family: monospace;
+	font-size: 15px;
+	height: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
 }
 
 a {
@@ -39,6 +46,13 @@ a:hover, a:active {
 	display: none !important;
 }
 
+.container {
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+}
+
 header {
 	display: flex;
 	padding: 0 10px;
@@ -47,7 +61,10 @@ header {
 	height: var(--header-height);
 	position: sticky;
 	top: 0;
+	left: 0;
 	background: var(--bg-page);
+	margin: 0 auto;
+	max-width: 2000px;
 }
 
 .title-small {
@@ -100,6 +117,8 @@ table {
 	margin: 0 auto;
 	border: 1px solid var(--bg-heading);
 	border-top-width: 0;
+	margin: 0 auto;
+	max-width: 2000px;
 }
 
 thead {
